feat dawn-theme: add TOC

--- a/partials/content.hbs
+++ b/partials/content.hbs
@@ -55,6 +55,7 @@
     {{/match}}
 
     <div class="single-content gh-content gh-canvas">
+        <aside class="gh-sidebar"><div class="gh-toc"></div></aside> {{! The TOC will be inserted here }}
         {{content}}
     </div>
 
