feat dawn: add comments

--- a/page.hbs
+++ b/page.hbs
@@ -2,7 +2,7 @@
 
 <main class="site-main">
 
-    <!--page-->
+    {{!--page--}}
     {{#post}}
         {{> "content" width="wide"}}
     {{/post}}
