--- a/post.hbs
+++ b/post.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 
 <main class="site-main">
-    <!--posts-->
+    {{!--posts--}}
     {{#post}}
         {{> "content" width="wide"}}
     {{/post}}
