--- a/partials/thoughts-posts.hbs
+++ b/partials/thoughts-posts.hbs
@@ -1,11 +1,11 @@
-{{#get "posts" limit=5 filter="primary_tag:[Growth]" order="published_at desc" as |growth_posts pages|}}
+{{#get "posts" limit=5 filter="primary_tag:[Thoughts]" order="published_at desc" as |thoughts_posts pages|}}
 {{#match pages.total "!=" 0}}
 <div class="gh-outer">
     
     <section class="featured-wrapper gh-inner">
-        <h2 class="featured-title">#Growth</h2>
+        <h2 class="featured-title">#Thoughts</h2>
         <div class="post-feed gh-feed gh-canvas">
-            {{#foreach growth_posts}}
+            {{#foreach thoughts_posts}}
                 {{> "loop"}}
             {{/foreach}}
         </div>
@@ -13,7 +13,7 @@
 
     {{#match pages.total ">" 5}}
     <nav class="load-more">
-        <a href="{{website}}/growth/" target="_blank" class="button button-secondary">Read more #Growth posts</a>
+        <a href="{{website}}/thoughts/" target="_blank" class="button button-secondary">Read more #Thoughts posts</a>
     </nav>
     {{/match}}
 </div>
