--- a/partials/growth-posts.hbs
+++ b/partials/growth-posts.hbs
@@ -1,21 +1,23 @@
 {{#get "posts" limit=5 filter="primary_tag:[Growth]" order="published_at desc" as |growth_posts pages|}}
 {{#match pages.total "!=" 0}}
-<div class="gh-outer">
-    
-    <section class="featured-wrapper gh-inner">
-        <h2 class="featured-title">#Growth</h2>
-        <div class="post-feed gh-feed gh-canvas">
-            {{#foreach growth_posts}}
-                {{> "loop"}}
-            {{/foreach}}
-        </div>
-    </section>
+<div class="column">
+    <div class="gh-outer">
+        
+        <section class="featured-wrapper gh-inner">
+            <h2 class="featured-title">#Growth</h2>
+            <div class="post-feed gh-feed gh-canvas">
+                {{#foreach growth_posts}}
+                    {{> "loop"}}
+                {{/foreach}}
+            </div>
+        </section>
 
-    {{#match pages.total ">" 5}}
-    <nav class="load-more">
-        <a href="{{website}}/growth/" target="_blank" class="button button-secondary">Read more #Growth posts</a>
-    </nav>
-    {{/match}}
+        {{#match pages.total ">" 5}}
+        <nav class="load-more">
+            <a href="{{website}}/growth/" target="_blank" class="button button-secondary">Read more #Growth posts</a>
+        </nav>
+        {{/match}}
+    </div>
 </div>
 {{/match}}
 {{/get}}
